cmake_minimum_required(VERSION 3.12)

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VERSION 0.0.${PATCH_VERSION})

project(editor VERSION ${PROJECT_VERSION} LANGUAGES CXX)

include_directories(domain)
include_directories(include)

 set(INSTALL_TARGET ${PROJECT_NAME} CACHE INTERNAL "")
 set(INSTALL_TARGET_LIB_BINARY ${INSTALL_TARGET}_lib CACHE INTERNAL "")

 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(src)

 install(TARGETS ${INSTALL_TARGET} RUNTIME DESTINATION bin)

 set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_CONTACT togushakov@gmail.com)
 include(CPack)